# brendapy

./: .gitattributes  .gitignore  .travis.yml  .zenodo.json  MANIFEST.in  README.md  README.rst  README_old.rst  RELEASE.md  fcode.sh  requirements-develop.txt  requirements.txt  resources.sh  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: main.yml
brendapy/: 1.14.13.29.txt  __init__.py  _version.py  examples.py  examples2.py  filterBRENDA.py  gene.py  missing_substances.txt  missing_tissues.txt  parseBRENDA.py  parser.py  protein.py  proteinBRENDA.py  queryBRENDA.py  settings.py  soapBRENDA.py  substances.py  substances_mapping.py  taxonomy.py  test.txt  test_parseBRENDA.py  tissues.py  utils.py
brendapy/misc/: filterBRENDA.py  parameters.py  parameters_sbml.py
brendapy/ontology/: owl.py  pubchem.py
brendapy/resources/: README.md  brenda_download.txt  brenda_readme.txt  unmapped_organisms.txt  unmapped_substances.txt
brendapy/tests/: test_brenda.py  test_examples.py  test_taxonomy.py
brendapy/webservices/: queryBRENDA.py
docs/images/favicon/: about.txt
release-notes/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.4.1.md  0.5.0.md
src/brendapy/: __init__.py  examples.py  log.py  owl_parser.py  parser.py  settings.py  substances.py  taxonomy.py  tissues.py  utils.py
src/brendapy/examples/: examples.py  parse_human_proteins.py
src/brendapy/ontologies/: owl_parser.py
src/brendapy/ontology/: owl.py
src/brendapy/resources/: README.md  resources.sh
tests/: conftest.py  test_brenda.py  test_examples.py  test_substances.py  test_taxonomy.py  test_tissues.py
