[bumpversion]
current_version = 0.5.0
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = brendapy
url = https://github.com/matthiaskoenig/brendapy
download_url = https://pypi.org/project/brendapy
project_urls = 
	Source Code = https://github.com/matthiaskoenig/brendapy
	Documentation = https://github.com/matthiaskoenig/brendapy
	Bug Tracker = https://github.com/matthiaskoenig/brendapy/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = Parsing BRENDA information.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
	BRENDA
	enzyme kinetics
	modeling

[options]
zip_safe = True
install_requires = 
	depinfo>=0.1.7
	pymetadata>=0.2.10
	rich
	requests
	pandas>=1.4.0
	pyparsing>=3.0.9
	ujson>=5.2.0
tests_require = 
	tox>=3.24.5
	pytest>=7.0.1
	pytest-cov>=3.0.0
setup_requires = 
	pytest-runner
packages = find:
package_dir = 
	= src
include_package_data = True

[options.package_data]
brendapy = py.typed

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development = 
	pip-tools>6.5.1
	black>=22.1.0
	bump2version>=1.0.1
	isort>=5.10.1
	tox>=3.24.3
	flake8>=4.0.1
	flake8-mypy>=17.8.0
	mypy>=0.931
	pytest>=7.0.1
	pytest-cov>=3.0.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values = 
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/brendapy/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
